extensions/renderer/bindings/api_binding_js_util_unittest.cc
@@ -379,10 +379,7 @@ TEST_F(APIBindingJSUtilUnittest, TestValidateCustomSignature) {
 
   // Test a failing case (prop1 is supposed to be a string).
   std::string expected_error =
-      "Uncaught TypeError: " +
-      api_errors::ArgumentError(
-          "", api_errors::InvalidType(api_errors::kTypeString,
-                                      api_errors::kTypeInteger));
+      "Uncaught TypeError: " + api_errors::NoMatchingSignature();
   call_validate_signature(
       R"((function(util) {
            util.validateCustomSignature('custom_signature', [1, 2]);
