extensions/renderer/bindings/api_binding_unittest.cc
@@ -313,22 +313,17 @@ TEST_F(APIBindingUnittest, TestBasicAPICalls) {
   ExpectPass(binding_object, "obj.oneString('foo');", "['foo']", false);
   ExpectFailure(
       binding_object, "obj.oneString(1);",
-      InvocationError(
-          "test.oneString", "string str",
-          ArgumentError("str", InvalidType(kTypeString, kTypeInteger))));
+      InvocationError("test.oneString", "string str", NoMatchingSignature()));
   ExpectPass(binding_object, "obj.stringAndInt('foo', 1)", "['foo',1]", false);
-  ExpectFailure(
-      binding_object, "obj.stringAndInt(1)",
-      InvocationError(
-          "test.stringAndInt", "string str, integer int",
-          ArgumentError("str", InvalidType(kTypeString, kTypeInteger))));
+  ExpectFailure(binding_object, "obj.stringAndInt(1)",
+                InvocationError("test.stringAndInt", "string str, integer int",
+                                NoMatchingSignature()));
   ExpectPass(binding_object, "obj.intAndCallback(1, function() {})", "[1]",
              true);
   ExpectFailure(
       binding_object, "obj.intAndCallback(function() {})",
-      InvocationError(
-          "test.intAndCallback", "integer int, function callback",
-          ArgumentError("int", InvalidType(kTypeInteger, kTypeFunction))));
+      InvocationError("test.intAndCallback", "integer int, function callback",
+                      NoMatchingSignature()));
 
   // ...And an interesting case (throwing an error during parsing).
   ExpectThrow(binding_object,
@@ -837,9 +832,7 @@ TEST_F(APIBindingUnittest, TestJSCustomHook) {
   // the hook should never have been called, since the arguments didn't match.
   ExpectFailure(
       binding_object, "obj.oneString(1);",
-      InvocationError(
-          "test.oneString", "string str",
-          ArgumentError("str", InvalidType(kTypeString, kTypeInteger))));
+      InvocationError("test.oneString", "string str", NoMatchingSignature()));
   v8::Local<v8::Value> property =
       GetPropertyFromObject(context->Global(), context, "requestArguments");
   ASSERT_FALSE(property.IsEmpty());
@@ -892,9 +885,7 @@ TEST_F(APIBindingUnittest, TestUpdateArgumentsPreValidate) {
   // have the hook called.
   ExpectFailure(
       binding_object, "obj.oneString(false);",
-      InvocationError(
-          "test.oneString", "string str",
-          ArgumentError("str", InvalidType(kTypeString, kTypeBoolean))));
+      InvocationError("test.oneString", "string str", NoMatchingSignature()));
   EXPECT_EQ("[false]", GetStringPropertyFromObject(
                            context->Global(), context, "requestArguments"));
 
@@ -1125,9 +1116,7 @@ TEST_F(APIBindingUnittest, TestUpdateArgumentsPostValidate) {
   // should never enter the hook.
   ExpectFailure(
       binding_object, "obj.oneString(false);",
-      InvocationError(
-          "test.oneString", "string str",
-          ArgumentError("str", InvalidType(kTypeString, kTypeBoolean))));
+      InvocationError("test.oneString", "string str", NoMatchingSignature()));
   EXPECT_EQ("undefined", GetStringPropertyFromObject(
                              context->Global(), context, "requestArguments"));
 
