extensions/renderer/bindings/api_signature_unittest.cc
@@ -138,6 +138,22 @@ std::unique_ptr<APISignature> OptionalObjectAndCallback() {
   return std::make_unique<APISignature>(std::move(specs));
 }
 
+std::unique_ptr<APISignature> OptionalIntAndNumber() {
+  SpecVector specs;
+  specs.push_back(
+      ArgumentSpecBuilder(ArgumentType::INTEGER, "int").MakeOptional().Build());
+  specs.push_back(ArgumentSpecBuilder(ArgumentType::DOUBLE, "num").Build());
+  return std::make_unique<APISignature>(std::move(specs));
+}
+
+std::unique_ptr<APISignature> OptionalIntAndInt() {
+  SpecVector specs;
+  specs.push_back(
+      ArgumentSpecBuilder(ArgumentType::INTEGER, "int").MakeOptional().Build());
+  specs.push_back(ArgumentSpecBuilder(ArgumentType::INTEGER, "int2").Build());
+  return std::make_unique<APISignature>(std::move(specs));
+}
+
 std::vector<v8::Local<v8::Value>> StringToV8Vector(
     v8::Local<v8::Context> context,
     const char* args) {
@@ -234,48 +250,39 @@ TEST_F(APISignatureTest, BasicSignatureParsing) {
   v8::HandleScope handle_scope(isolate());
 
   {
+    SCOPED_TRACE("OneString");
     auto signature = OneString();
     ExpectPass(*signature, "['foo']", "['foo']", false);
     ExpectPass(*signature, "['']", "['']", false);
-    ExpectFailure(
-        *signature, "[1]",
-        ArgumentError("string", InvalidType(kTypeString, kTypeInteger)));
-    ExpectFailure(*signature, "[]", MissingRequiredArgument("string"));
-    ExpectFailure(
-        *signature, "[{}]",
-        ArgumentError("string", InvalidType(kTypeString, kTypeObject)));
-    ExpectFailure(*signature, "['foo', 'bar']", TooManyArguments());
+    ExpectFailure(*signature, "[1]", NoMatchingSignature());
+    ExpectFailure(*signature, "[]", NoMatchingSignature());
+    ExpectFailure(*signature, "[{}]", NoMatchingSignature());
+    ExpectFailure(*signature, "['foo', 'bar']", NoMatchingSignature());
   }
 
   {
+    SCOPED_TRACE("StringAndInt");
     auto signature = StringAndInt();
     ExpectPass(*signature, "['foo', 42]", "['foo',42]", false);
     ExpectPass(*signature, "['foo', -1]", "['foo',-1]", false);
-    ExpectFailure(
-        *signature, "[1]",
-        ArgumentError("string", InvalidType(kTypeString, kTypeInteger)));
-    ExpectFailure(*signature, "['foo'];", MissingRequiredArgument("int"));
-    ExpectFailure(
-        *signature, "[1, 'foo']",
-        ArgumentError("string", InvalidType(kTypeString, kTypeInteger)));
-    ExpectFailure(*signature, "['foo', 'foo']",
-                  ArgumentError("int", InvalidType(kTypeInteger, kTypeString)));
-    ExpectFailure(*signature, "['foo', '1']",
-                  ArgumentError("int", InvalidType(kTypeInteger, kTypeString)));
-    ExpectFailure(*signature, "['foo', 2.3]",
-                  ArgumentError("int", InvalidType(kTypeInteger, kTypeDouble)));
+    ExpectFailure(*signature, "[1]", NoMatchingSignature());
+    ExpectFailure(*signature, "['foo'];", NoMatchingSignature());
+    ExpectFailure(*signature, "[1, 'foo']", NoMatchingSignature());
+    ExpectFailure(*signature, "['foo', 'foo']", NoMatchingSignature());
+    ExpectFailure(*signature, "['foo', '1']", NoMatchingSignature());
+    ExpectFailure(*signature, "['foo', 2.3]", NoMatchingSignature());
   }
 
   {
+    SCOPED_TRACE("StringOptionalIntAndBool");
     auto signature = StringOptionalIntAndBool();
     ExpectPass(*signature, "['foo', 42, true]", "['foo',42,true]", false);
     ExpectPass(*signature, "['foo', true]", "['foo',null,true]", false);
-    ExpectFailure(
-        *signature, "['foo', 'bar', true]",
-        ArgumentError("bool", InvalidType(kTypeBoolean, kTypeString)));
+    ExpectFailure(*signature, "['foo', 'bar', true]", NoMatchingSignature());
   }
 
   {
+    SCOPED_TRACE("OneObject");
     auto signature = OneObject();
     ExpectPass(*signature, "[{prop1: 'foo'}]", "[{'prop1':'foo'}]", false);
     ExpectFailure(*signature,
@@ -284,41 +291,42 @@ TEST_F(APISignatureTest, BasicSignatureParsing) {
   }
 
   {
+    SCOPED_TRACE("NoArgs");
     auto signature = NoArgs();
     ExpectPass(*signature, "[]", "[]", false);
-    ExpectFailure(*signature, "[0]", TooManyArguments());
-    ExpectFailure(*signature, "['']", TooManyArguments());
-    ExpectFailure(*signature, "[null]", TooManyArguments());
-    ExpectFailure(*signature, "[undefined]", TooManyArguments());
+    ExpectFailure(*signature, "[0]", NoMatchingSignature());
+    ExpectFailure(*signature, "['']", NoMatchingSignature());
+    ExpectFailure(*signature, "[null]", NoMatchingSignature());
+    ExpectFailure(*signature, "[undefined]", NoMatchingSignature());
   }
 
   {
+    SCOPED_TRACE("IntAndCallback");
     auto signature = IntAndCallback();
     ExpectPass(*signature, "[1, function() {}]", "[1]", true);
-    ExpectFailure(
-        *signature, "[function() {}]",
-        ArgumentError("int", InvalidType(kTypeInteger, kTypeFunction)));
-    ExpectFailure(*signature, "[1]", MissingRequiredArgument("callback"));
+    ExpectFailure(*signature, "[function() {}]", NoMatchingSignature());
+    ExpectFailure(*signature, "[1]", NoMatchingSignature());
   }
 
   {
+    SCOPED_TRACE("OptionalIntAndCallback");
     auto signature = OptionalIntAndCallback();
     ExpectPass(*signature, "[1, function() {}]", "[1]", true);
     ExpectPass(*signature, "[function() {}]", "[null]", true);
-    ExpectFailure(*signature, "[1]", MissingRequiredArgument("callback"));
+    ExpectFailure(*signature, "[1]", NoMatchingSignature());
   }
 
   {
+    SCOPED_TRACE("OptionalCallback");
     auto signature = OptionalCallback();
     ExpectPass(*signature, "[function() {}]", "[]", true);
     ExpectPass(*signature, "[]", "[]", false);
     ExpectPass(*signature, "[undefined]", "[]", false);
-    ExpectFailure(
-        *signature, "[0]",
-        ArgumentError("callback", InvalidType(kTypeFunction, kTypeInteger)));
+    ExpectFailure(*signature, "[0]", NoMatchingSignature());
   }
 
   {
+    SCOPED_TRACE("IntAnyOptionalObjectOptionalCallback");
     auto signature = IntAnyOptionalObjectOptionalCallback();
     ExpectPass(*signature, "[4, {foo: 'bar'}, function() {}]",
                "[4,{'foo':'bar'},null]", true);
@@ -328,10 +336,11 @@ TEST_F(APISignatureTest, BasicSignatureParsing) {
                false);
     ExpectFailure(*signature, "[4, function() {}]",
                   ArgumentError("any", UnserializableValue()));
-    ExpectFailure(*signature, "[4]", MissingRequiredArgument("any"));
+    ExpectFailure(*signature, "[4]", NoMatchingSignature());
   }
 
   {
+    SCOPED_TRACE("OptionalObjectAndCallback");
     auto signature = OptionalObjectAndCallback();
     ExpectPass(*signature, "[{prop1: 1}]", "[{'prop1':1}]", false);
     ExpectPass(*signature, "[]", "[null]", false);
@@ -344,6 +353,28 @@ TEST_F(APISignatureTest, BasicSignatureParsing) {
         *signature, "[{prop1: 'str'}, function() {}]",
         ArgumentError("obj", PropertyError("prop1", InvalidType(kTypeInteger,
                                                                 kTypeString))));
+  }
+
+  {
+    SCOPED_TRACE("OptionalIntAndNumber");
+    auto signature = OptionalIntAndNumber();
+    ExpectPass(*signature, "[1.0, 1.0]", "[1,1.0]", false);
+    ExpectPass(*signature, "[1, 1]", "[1,1.0]", false);
+    ExpectPass(*signature, "[1.0]", "[null,1.0]", false);
+    ExpectPass(*signature, "[1]", "[null,1.0]", false);
+    ExpectFailure(*signature, "[1.0, null]", NoMatchingSignature());
+    ExpectFailure(*signature, "[1, null]", NoMatchingSignature());
+  }
+
+  {
+    SCOPED_TRACE("OptionalIntAndInt");
+    auto signature = OptionalIntAndInt();
+    ExpectPass(*signature, "[1.0, 1.0]", "[1,1]", false);
+    ExpectPass(*signature, "[1, 1]", "[1,1]", false);
+    ExpectPass(*signature, "[1.0]", "[null,1]", false);
+    ExpectPass(*signature, "[1]", "[null,1]", false);
+    ExpectFailure(*signature, "[1.0, null]", NoMatchingSignature());
+    ExpectFailure(*signature, "[1, null]", NoMatchingSignature());
   }
 }
 
